--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-ATLAS_URI=mongodb+srv://prav3897:7bEihk0vpSDeDeJI@cluster0.cyoe45m.mongodb.net/?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://<username>:<password>/?retryWrites=true&w=majority
 PORT=5001
